# wenshu

./: .gitignore  Makefile  pyproject.toml
db/: create.sql  setup.sh
web/: __init__.py  db.py  guiding.py  main.py  refcase.py  test.py
web/static/: script.js  styles.css
web/templates/: base.html  case.html  index.html  listing.html
wenshu/: convert_guiding.py  extract.py  read.py
