[project]
name = "wenshu"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ollama (>=0.4.7)",
    "spacy (>=3.8.4)",
    "srsly (>=2.5.1)",
    "blis (>=1.2.0)",
    "Flask (>=3.1.0)",
    "SQLAlchemy (>=2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
